<resources>
    <string name="app_name">Ember Trading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_button">Commencer</string>

    <!-- Text Heading -->
    <string name="first_slide_heading">Livraison de braises</string>
    <string name="second_slide_heading">Passer commande</string>
    <string name="third_slide_heading">Et pour bientôt …</string>
    <string name="fourth_slide_heading">Savourez le numérique</string>


    <!-- Text Description -->
    <string name="first_slide_desc">Ember Trading Kolwezi vous présentes un service de vente et de livraison de braises à domicile, selon le nombre de sac désiré…</string>
    <string name="second_slide_desc">Ember Trading Kolwezi est disponible de recevoir vos commandes partout sur la ville de Kolwezi. Un coup de fil et nous sommes à votre service…</string>
    <string name="third_slide_desc">Acheter de la braise directement en ligne grace à Airtel Money, Orange Money ou M-Pesa…</string>
    <string name="fourth_slide_desc">Grâce à notre application vous allez voir la progression de vos achats sur le tableau de bord conçues expressement pour vous…</string>
    <string name="skip_btn">SKIP</string>
    <string name="logo_name">Get A Way</string>
    <string name="search_text">Voir une destination...</string>
    <string name="call_us">Appelez-ici</string>
    <string name="help">Aide !</string>
    <string name="livraison_effectue">Les utilisateurs s\'expriment.</string>
    <string name="livraison_effectue_descipriton">Ce que nos utilisateurs disent de nous. Aidez nous à amiliorer notre service.</string>
    <string name="nombre_d_utilisateur">Nombre d\'Utilisateur</string>
    <string name="nombre_d_utilisateur_value">0</string>
    <string name="commande_livrer">Commande Livrer</string>
    <string name="connectez_vous">Connectez Vous !!!</string>
    <string name="connecting_text">Connectez vous et commencez à profiter de nos services. Vous ne serez pas déçu.</string>
    <string name="s_enregistrer">S\'Enregistrer</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="what_s_wrong">Un Problème avec votre compte ?</string>
    <string name="login">Se Connecter</string>
    <string name="email">Adresse Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_rappeler_de_moi">Se rappeler de moi</string>
    <string name="mot_de_passe_oublier">Mot de passe oublier</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="go_back_button">Go Back Button</string>
    <string name="enregistrement">Enregistrer vous et rejoigner la communauté</string>
    <string name="num_phone">Numéro Téléphone</string>
    <string name="code">Co\nde</string>
    <string name="verification">verification</string>
    <string name="label_verification">Saisir le code de confirmation envoyé au numéro \n +243975442523</string>
    <string name="verification_du_code">Verification du code</string>
    <string name="nom">Nom :</string>
    <string name="level">Level :</string>
    <string name="status">Status :</string>
</resources>