<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zedlab.embersolutionofficial.Controllers.Fragments.SignFragment">

    <LinearLayout
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/go_back_icon"
            android:layout_margin="10dp"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/fire" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/baumans"
            android:padding="10dp"
            android:text="@string/connectez_vous"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/connecting_text"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fragment_sign_connecting_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:elevation="8dp"
                android:padding="5dp"
                android:text="@string/se_connecter"
                android:layout_marginRight="20dp" />

            <Button
                android:id="@+id/fragment_sign_signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorPrimary"
                android:elevation="8dp"
                android:padding="5dp"
                android:text="@string/s_enregistrer" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:padding="10dp"
            android:background="#fff"
            android:elevation="8dp"
            android:text="@string/what_s_wrong" />
    </LinearLayout>
</LinearLayout>